--- a/.config/environment.yml
+++ b/.config/environment.yml
@@ -1,58 +1,328 @@
 name: tue_dsp
 channels:
+  - conda-forge
   - defaults
 dependencies:
+  - abseil-cpp=20211102.0=he4e09e4_3
+  - aiofiles=22.1.0=pyhd8ed1ab_0
+  - aiohttp=3.8.6=py310hd125d64_1
+  - aiosignal=1.3.1=pyhd8ed1ab_0
+  - aiosqlite=0.19.0=pyhd8ed1ab_0
+  - anyio=4.0.0=pyhd8ed1ab_0
+  - aom=3.4.0=hbe31e94_1
+  - appnope=0.1.3=pyhd8ed1ab_0
+  - argon2-cffi=23.1.0=pyhd8ed1ab_0
+  - argon2-cffi-bindings=21.2.0=py310h2aa6e3c_4
+  - arrow=1.3.0=pyhd8ed1ab_0
+  - asttokens=2.4.1=pyhd8ed1ab_0
+  - async-timeout=4.0.3=pyhd8ed1ab_0
+  - attrs=23.1.0=pyh71513ae_1
+  - babel=2.13.1=pyhd8ed1ab_0
+  - backports=1.0=pyhd8ed1ab_3
+  - backports.functools_lru_cache=1.6.5=pyhd8ed1ab_0
+  - beautifulsoup4=4.12.2=pyha770c72_0
   - blas=1.0=openblas
+  - bleach=6.1.0=pyhd8ed1ab_0
+  - blosc=1.21.0=h98b2900_1
   - bottleneck=1.3.5=py310h96f19d2_0
+  - bqplot=0.12.42=pyhd8ed1ab_0
+  - branca=0.7.0=pyhd8ed1ab_1
+  - brotli=1.1.0=hb547adb_1
+  - brotli-bin=1.1.0=hb547adb_1
+  - brotli-python=1.0.9=py310h0f1eb42_8
   - bzip2=1.0.8=h620ffc9_4
+  - c-ares=1.21.0=h93a5062_0
   - ca-certificates=2023.08.22=hca03da5_0
+  - cached-property=1.5.2=hd8ed1ab_1
+  - cached_property=1.5.2=pyha770c72_1
+  - cachetools=5.3.2=pyhd8ed1ab_0
+  - certifi=2023.7.22=pyhd8ed1ab_0
+  - cffi=1.16.0=py310hdcd7c05_0
+  - charset-normalizer=3.3.2=pyhd8ed1ab_0
+  - click=8.1.7=unix_pyh707e725_0
+  - colorama=0.4.6=pyhd8ed1ab_0
+  - colour=0.1.5=py_0
+  - comm=0.1.4=pyhd8ed1ab_0
+  - contourpy=1.0.7=py310h2887b22_0
+  - cryptography=41.0.5=py310h0e6f4b3_0
+  - cycler=0.12.1=pyhd8ed1ab_0
+  - debugpy=1.6.7=py310h0f1eb42_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - defusedxml=0.7.1=pyhd8ed1ab_0
+  - earthengine-api=0.1.378=pyhd8ed1ab_0
+  - ee_extra=0.0.15=pyhd8ed1ab_0
+  - eerepr=0.0.4=pyhd8ed1ab_0
+  - entrypoints=0.4=pyhd8ed1ab_0
+  - exceptiongroup=1.1.3=pyhd8ed1ab_0
+  - executing=2.0.1=pyhd8ed1ab_0
+  - expat=2.5.0=hb7217d7_1
+  - ffmpeg=5.1.1=gpl_hfdc7bce_101
+  - ffmpeg-python=0.2.0=py_0
+  - filelock=3.13.1=pyhd8ed1ab_0
+  - folium=0.15.0=pyhd8ed1ab_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=hab24e00_0
+  - fontconfig=2.14.2=h82840c6_0
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - fonttools=4.44.0=py310hd125d64_0
+  - fqdn=1.5.1=pyhd8ed1ab_0
+  - freetype=2.12.1=hadb7bae_2
+  - frozenlist=1.4.0=py310h2aa6e3c_1
+  - future=0.18.3=pyhd8ed1ab_0
+  - gdown=4.7.1=pyhd8ed1ab_0
+  - geeadd=0.5.6=pyhd8ed1ab_0
+  - geemap=0.29.5=pyhd8ed1ab_0
+  - geocoder=1.38.1=py_1
+  - geojson=3.1.0=pyhd8ed1ab_0
+  - geos=3.9.1=hc377ac9_1
+  - gettext=0.19.8.1=h049c9fb_1008
+  - giflib=5.2.1=h80987f9_3
+  - gmp=6.2.1=h9f76cd9_0
+  - gnutls=3.7.8=h9f1a10d_0
+  - google-api-core=2.14.0=pyhd8ed1ab_0
+  - google-api-python-client=2.108.0=pyhd8ed1ab_0
+  - google-auth=2.23.4=pyhca7485f_0
+  - google-auth-httplib2=0.1.1=pyhd8ed1ab_0
+  - google-cloud-core=2.3.3=pyhd8ed1ab_0
+  - google-cloud-storage=2.13.0=pyhca7485f_0
+  - google-crc32c=1.1.2=py310he3713fb_5
+  - google-resumable-media=2.6.0=pyhd8ed1ab_0
+  - googleapis-common-protos=1.61.0=pyhd8ed1ab_0
+  - grpc-cpp=1.46.3=h65cd93d_1
+  - grpcio=1.46.3=py310h5c97277_1
+  - httplib2=0.22.0=pyhd8ed1ab_0
+  - icu=68.2=hbdafb3b_0
+  - idna=3.4=pyhd8ed1ab_0
+  - importlib-metadata=6.8.0=pyha770c72_0
+  - importlib_metadata=6.8.0=hd8ed1ab_0
+  - importlib_resources=6.1.1=pyhd8ed1ab_0
+  - ipyevents=2.0.2=pyhd8ed1ab_0
+  - ipyfilechooser=0.6.0=pyhd8ed1ab_0
+  - ipykernel=6.26.0=pyh3cd1d5f_0
+  - ipyleaflet=0.17.4=pyhd8ed1ab_0
+  - ipython=8.17.2=pyh31c8845_0
+  - ipython_genutils=0.2.0=py_1
+  - ipytree=0.2.2=pyhd8ed1ab_0
+  - ipywidgets=8.1.1=pyhd8ed1ab_0
+  - isoduration=20.11.0=pyhd8ed1ab_0
+  - jedi=0.19.1=pyhd8ed1ab_0
+  - jinja2=3.1.2=pyhd8ed1ab_1
+  - jpeg=9e=h80987f9_1
+  - json5=0.9.14=pyhd8ed1ab_0
+  - jsonpointer=2.4=py310hbe9552e_3
+  - jsonschema=4.19.2=pyhd8ed1ab_0
+  - jsonschema-specifications=2023.7.1=pyhd8ed1ab_0
+  - jsonschema-with-format-nongpl=4.19.2=pyhd8ed1ab_0
+  - jupyter_client=7.4.9=pyhd8ed1ab_0
+  - jupyter_core=5.5.0=py310hbe9552e_0
+  - jupyter_events=0.9.0=pyhd8ed1ab_0
+  - jupyter_server=2.10.0=pyhd8ed1ab_0
+  - jupyter_server_fileid=0.9.0=pyhd8ed1ab_0
+  - jupyter_server_terminals=0.4.4=pyhd8ed1ab_1
+  - jupyter_server_ydoc=0.8.0=pyhd8ed1ab_0
+  - jupyter_ydoc=0.2.4=pyhd8ed1ab_0
+  - jupyterlab=3.6.6=pyhd8ed1ab_0
+  - jupyterlab_pygments=0.2.2=pyhd8ed1ab_0
+  - jupyterlab_server=2.25.1=pyhd8ed1ab_0
+  - jupyterlab_widgets=3.0.9=pyhd8ed1ab_0
+  - kiwisolver=1.4.4=py310h2887b22_1
+  - krb5=1.20.1=h69eda48_0
+  - lame=3.100=h1a8c8d9_1003
+  - lcms2=2.12=hba8e193_0
+  - lerc=3.0=hc377ac9_0
+  - libabseil=20211102.0=cxx17_h28b99d4_3
+  - libbrotlicommon=1.1.0=hb547adb_1
+  - libbrotlidec=1.1.0=hb547adb_1
+  - libbrotlienc=1.1.0=hb547adb_1
+  - libcrc32c=1.1.2=hbdafb3b_0
   - libcxx=14.0.6=h848a8c0_0
+  - libdeflate=1.8=h1a28f6b_5
+  - libedit=3.1.20221030=h80987f9_0
+  - libexpat=2.5.0=hb7217d7_1
   - libffi=3.4.4=hca03da5_0
   - libgfortran=5.0.0=11_3_0_hca03da5_28
   - libgfortran5=11.3.0=h009349e_28
+  - libiconv=1.16=h1a28f6b_2
+  - libidn2=2.3.3=he4db4b2_0
+  - libjpeg-turbo=2.0.0=h1a28f6b_0
   - libopenblas=0.3.21=h269037a_0
+  - libpng=1.6.39=h76d750c_0
+  - libpq=15.3=h7126958_0
+  - libprotobuf=3.20.3=hb5ab8b9_0
+  - librttopo=1.1.0=hf7bfa32_6
+  - libsodium=1.0.18=h27ca646_1
+  - libsqlite=3.44.0=h091b4b1_0
+  - libtasn1=4.19.0=h1a8c8d9_0
+  - libtiff=4.4.0=h2fd578a_2
+  - libunistring=0.9.10=h3422bc3_0
+  - libvpx=1.11.0=hc470f4d_3
+  - libwebp=1.3.2=ha3663a8_0
+  - libwebp-base=1.3.2=hb547adb_0
+  - libxcb=1.15=hf346824_0
+  - libxml2=2.10.4=h372ba2a_0
+  - libzlib=1.2.13=h53f4e23_5
   - llvm-openmp=14.0.6=hc6e5704_0
+  - logzero=1.7.0=py310hbe9552e_5
+  - lz4-c=1.9.3=hc377ac9_0
+  - markupsafe=2.1.3=py310h2aa6e3c_1
+  - matplotlib-base=3.7.1=py310h78c5c2f_0
+  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
+  - mistune=3.0.2=pyhd8ed1ab_0
+  - multidict=6.0.4=py310h8e9501a_1
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - nbclassic=1.0.0=pyhb4ecaf3_1
+  - nbclient=0.8.0=pyhd8ed1ab_0
+  - nbconvert=7.11.0=pyhd8ed1ab_0
+  - nbconvert-core=7.11.0=pyhd8ed1ab_0
+  - nbconvert-pandoc=7.11.0=pyhd8ed1ab_0
+  - nbformat=5.9.2=pyhd8ed1ab_0
   - ncurses=6.4=h313beb8_0
+  - nest-asyncio=1.5.8=pyhd8ed1ab_0
+  - nettle=3.8.1=h63371fa_1
+  - notebook=6.5.6=pyha770c72_0
+  - notebook-shim=0.2.3=pyhd8ed1ab_0
+  - nspr=4.35=h313beb8_0
+  - nss=3.89.1=h313beb8_0
   - numexpr=2.8.7=py310hecc3335_0
   - numpy=1.26.0=py310h3b2db8e_0
   - numpy-base=1.26.0=py310ha9811e2_0
-  - openssl=3.0.12=h1a28f6b_0
+  - openh264=2.3.0=h9a09cb3_0
+  - openjpeg=2.5.0=h5d4e404_1
+  - openssl=3.1.4=h0d3ecfb_0
+  - overrides=7.4.0=pyhd8ed1ab_0
+  - p11-kit=0.24.1=h29577a5_0
+  - packaging=23.2=pyhd8ed1ab_0
   - pandas=2.1.1=py310h46d7db6_0
+  - pandoc=3.1.3=hce30654_0
+  - pandocfilters=1.5.0=pyhd8ed1ab_0
+  - parso=0.8.3=pyhd8ed1ab_0
+  - pcre2=10.42=hb066dcc_0
+  - pexpect=4.8.0=pyh1a96a4e_2
+  - pickleshare=0.7.5=py_1003
+  - pillow=10.0.1=py310h3b245a6_0
   - pip=23.3=py310hca03da5_0
-  - python=3.10.11=hb885b13_3
+  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_1
+  - plotly=5.18.0=pyhd8ed1ab_0
+  - postgresql=15.3=ha51c797_0
+  - prometheus_client=0.18.0=pyhd8ed1ab_1
+  - prompt-toolkit=3.0.41=pyha770c72_0
+  - prompt_toolkit=3.0.41=hd8ed1ab_0
+  - protobuf=3.20.3=py310h0f1eb42_1
+  - psutil=5.9.5=py310h2aa6e3c_1
+  - pthread-stubs=0.4=h27ca646_1001
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pure_eval=0.2.2=pyhd8ed1ab_0
+  - pyasn1=0.5.0=pyhd8ed1ab_0
+  - pyasn1-modules=0.3.0=pyhd8ed1ab_0
+  - pycparser=2.21=pyhd8ed1ab_0
+  - pycrs=1.0.2=py_0
+  - pygments=2.16.1=pyhd8ed1ab_0
+  - pyobjc-core=10.0=py310hd07e440_0
+  - pyobjc-framework-cocoa=10.0=py310hd07e440_1
+  - pyopenssl=23.3.0=pyhd8ed1ab_0
+  - pyparsing=3.1.1=pyhd8ed1ab_0
+  - pyperclip=1.8.2=pyhd8ed1ab_2
+  - pyshp=2.3.1=pyhd8ed1ab_0
+  - pysocks=1.7.1=pyha2e5f31_6
+  - python=3.10.13=h2469fbe_0_cpython
+  - python-box=7.1.1=py310h2aa6e3c_0
   - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python-fastjsonschema=2.18.1=pyhd8ed1ab_0
+  - python-json-logger=2.0.7=pyhd8ed1ab_0
   - python-tzdata=2023.3=pyhd3eb1b0_0
+  - python_abi=3.10=4_cp310
   - pytz=2023.3.post1=py310hca03da5_0
+  - pyu2f=0.1.5=pyhd8ed1ab_0
+  - pyyaml=6.0.1=py310h2aa6e3c_1
+  - pyzmq=24.0.1=py310hc407298_1
+  - qhull=2020.2=h48ca7d4_2
+  - ratelim=0.1.6=py_2
+  - re2=2022.04.01=h6b3803e_0
   - readline=8.2=h1a28f6b_0
+  - referencing=0.30.2=pyhd8ed1ab_0
+  - requests=2.31.0=pyhd8ed1ab_0
+  - rfc3339-validator=0.1.4=pyhd8ed1ab_0
+  - rfc3986-validator=0.1.1=pyh9f0ad1d_0
+  - rpds-py=0.12.0=py310hd442715_0
+  - rsa=4.9=pyhd8ed1ab_0
+  - ruamel.yaml=0.18.5=py310hd125d64_0
+  - ruamel.yaml.clib=0.2.7=py310h2aa6e3c_2
+  - sankee=0.2.4=pyhd8ed1ab_0
+  - scooby=0.9.2=pyhd8ed1ab_0
+  - send2trash=1.8.2=pyhd1c38e8_0
   - setuptools=68.0.0=py310hca03da5_0
   - six=1.16.0=pyhd3eb1b0_1
+  - sniffio=1.3.0=pyhd8ed1ab_0
+  - soupsieve=2.5=pyhd8ed1ab_1
   - sqlite=3.41.2=h80987f9_0
-  - tk=8.6.12=hb8d0fd4_0
+  - stack_data=0.6.2=pyhd8ed1ab_0
+  - svt-av1=1.2.1=he23bcac_0
+  - tenacity=8.2.3=pyhd8ed1ab_0
+  - terminado=0.18.0=pyh31c8845_0
+  - tinycss2=1.2.1=pyhd8ed1ab_0
+  - tk=8.6.13=h5083fa2_1
+  - toml=0.10.2=pyhd8ed1ab_0
+  - tomli=2.0.1=pyhd8ed1ab_0
+  - tornado=6.3.3=py310h2aa6e3c_1
+  - tqdm=4.66.1=pyhd8ed1ab_0
+  - traitlets=5.13.0=pyhd8ed1ab_0
+  - traittypes=0.2.1=pyh9f0ad1d_2
+  - types-python-dateutil=2.8.19.14=pyhd8ed1ab_0
+  - typing-extensions=4.8.0=hd8ed1ab_0
+  - typing_extensions=4.8.0=pyha770c72_0
+  - typing_utils=0.1.0=pyhd8ed1ab_0
+  - tzcode=2023c=h1a8c8d9_0
   - tzdata=2023c=h04d1e81_0
+  - unicodedata2=15.1.0=py310h2aa6e3c_0
+  - uri-template=1.3.0=pyhd8ed1ab_0
+  - uritemplate=4.1.1=pyhd8ed1ab_0
+  - wcwidth=0.2.10=pyhd8ed1ab_0
+  - webcolors=1.13=pyhd8ed1ab_0
+  - webencodings=0.5.1=pyhd8ed1ab_2
+  - websocket-client=1.6.4=pyhd8ed1ab_0
   - wheel=0.41.2=py310hca03da5_0
+  - whitebox=2.3.1=pyhd8ed1ab_0
+  - whiteboxgui=2.3.0=pyhd8ed1ab_0
+  - widgetsnbextension=4.0.9=pyhd8ed1ab_0
+  - x264=1!164.3095=h57fd34a_2
+  - x265=3.5=hbc6ce65_3
+  - xorg-kbproto=1.0.7=h27ca646_1002
+  - xorg-libx11=1.8.7=hfd9643e_0
+  - xorg-libxau=1.0.11=hb547adb_0
+  - xorg-libxdmcp=1.1.3=h27ca646_0
+  - xorg-xextproto=7.3.0=h1a8c8d9_1003
+  - xorg-xproto=7.0.31=h27ca646_1007
+  - xyzservices=2023.10.1=pyhd8ed1ab_0
   - xz=5.4.2=h80987f9_0
-  - zlib=1.2.13=h5a0b063_0
+  - y-py=0.5.9=py310h1dc5ec9_0
+  - yaml=0.2.5=h3422bc3_2
+  - yarl=1.9.2=py310hd125d64_1
+  - ypy-websocket=0.8.2=pyhd8ed1ab_0
+  - zeromq=4.3.4=hbdafb3b_1
+  - zipp=3.17.0=pyhd8ed1ab_0
+  - zlib=1.2.13=h53f4e23_5
+  - zstd=1.5.5=h4f39d0f_0
   - pip:
-      - attrs==23.1.0
+      - blessings==1.7
       - cattrs==23.1.2
-      - certifi==2023.7.22
-      - charset-normalizer==3.3.2
-      - click==8.1.7
-      - decorator==5.1.1
-      - exceptiongroup==1.1.3
+      - click-plugins==1.1.1
+      - cligj==0.7.2
+      - fiona==1.9.5
       - flatbuffers==23.5.26
-      - future==0.18.3
       - geographiclib==2.0
+      - geopandas==0.14.1
       - geopy==2.4.0
-      - idna==3.4
+      - mss==9.0.1
       - openmeteo-requests==1.1.0
       - openmeteo-sdk==1.5.0
       - platformdirs==3.11.0
-      - ratelim==0.1.6
-      - requests==2.31.0
+      - pyproj==3.6.1
       - requests-cache==1.1.0
       - retry-requests==2.0.0
-      - typing-extensions==4.8.0
+      - shapely==2.0.2
       - url-normalize==1.4.3
       - urllib3==2.0.7
 prefix: /Users/mAx/miniconda3/envs/tue_dsp
