--- a/.config/environment.yml
+++ b/.config/environment.yml
@@ -36,7 +36,7 @@ dependencies:
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
   - cachetools=5.3.2=pyhd8ed1ab_0
-  - certifi=2023.7.22=pyhd8ed1ab_0
+  - certifi=2023.11.17=py310hca03da5_0
   - cffi=1.16.0=py310hdcd7c05_0
   - charset-normalizer=3.3.2=pyhd8ed1ab_0
   - click=8.1.7=unix_pyh707e725_0
@@ -91,6 +91,7 @@ dependencies:
   - google-crc32c=1.1.2=py310he3713fb_5
   - google-resumable-media=2.6.0=pyhd8ed1ab_0
   - googleapis-common-protos=1.61.0=pyhd8ed1ab_0
+  - greenlet=2.0.1=py310h313beb8_0
   - grpc-cpp=1.46.3=h65cd93d_1
   - grpcio=1.46.3=py310h5c97277_1
   - httplib2=0.22.0=pyhd8ed1ab_0
@@ -150,7 +151,7 @@ dependencies:
   - libjpeg-turbo=2.0.0=h1a28f6b_0
   - libopenblas=0.3.21=h269037a_0
   - libpng=1.6.39=h76d750c_0
-  - libpq=15.3=h7126958_0
+  - libpq=12.15=h02f6b3c_1
   - libprotobuf=3.20.3=hb5ab8b9_0
   - librttopo=1.1.0=hf7bfa32_6
   - libsodium=1.0.18=h27ca646_1
@@ -163,9 +164,11 @@ dependencies:
   - libwebp-base=1.3.2=hb547adb_0
   - libxcb=1.15=hf346824_0
   - libxml2=2.10.4=h372ba2a_0
+  - libxslt=1.1.37=habca612_0
   - libzlib=1.2.13=h53f4e23_5
   - llvm-openmp=14.0.6=hc6e5704_0
   - logzero=1.7.0=py310hbe9552e_5
+  - lxml=4.9.3=py310h50ffb84_0
   - lz4-c=1.9.3=hc377ac9_0
   - markupsafe=2.1.3=py310h2aa6e3c_1
   - matplotlib-base=3.7.1=py310h78c5c2f_0
@@ -206,12 +209,13 @@ dependencies:
   - pip=23.3=py310hca03da5_0
   - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_1
   - plotly=5.18.0=pyhd8ed1ab_0
-  - postgresql=15.3=ha51c797_0
+  - postgresql=12.15=h2b78512_1
   - prometheus_client=0.18.0=pyhd8ed1ab_1
   - prompt-toolkit=3.0.41=pyha770c72_0
   - prompt_toolkit=3.0.41=hd8ed1ab_0
   - protobuf=3.20.3=py310h0f1eb42_1
   - psutil=5.9.5=py310h2aa6e3c_1
+  - psycopg2=2.9.3=py310h80987f9_1
   - pthread-stubs=0.4=h27ca646_1001
   - ptyprocess=0.7.0=pyhd3deb0d_0
   - pure_eval=0.2.2=pyhd8ed1ab_0
@@ -257,6 +261,7 @@ dependencies:
   - six=1.16.0=pyhd3eb1b0_1
   - sniffio=1.3.0=pyhd8ed1ab_0
   - soupsieve=2.5=pyhd8ed1ab_1
+  - sqlalchemy=2.0.21=py310h80987f9_0
   - sqlite=3.41.2=h80987f9_0
   - stack_data=0.6.2=pyhd8ed1ab_0
   - svt-av1=1.2.1=he23bcac_0
