--- a/.config/requirements.txt
+++ b/.config/requirements.txt
@@ -22,7 +22,7 @@ Brotli==1.0.9
 cached-property==1.5.2
 cachetools==5.3.2
 cattrs==23.1.2
-certifi==2023.7.22
+certifi==2023.11.17
 cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
@@ -70,6 +70,7 @@ google-cloud-storage==2.13.0
 google-crc32c==1.1.2
 google-resumable-media==2.6.0
 googleapis-common-protos==1.61.0
+greenlet==2.0.1
 grpcio==1.46.3
 httplib2==0.22.0
 idna==3.4
@@ -104,6 +105,7 @@ jupyterlab_server==2.25.1
 jupyterlab-widgets==3.0.9
 kiwisolver==1.4.4
 logzero==1.7.0
+lxml==4.9.3
 MarkupSafe==2.1.3
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
@@ -138,6 +140,7 @@ prometheus-client==0.18.0
 prompt-toolkit==3.0.41
 protobuf==3.20.3
 psutil==5.9.5
+psycopg2==2.9.3
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyasn1==0.5.0
@@ -179,6 +182,7 @@ shapely==2.0.2
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
+SQLAlchemy==2.0.21
 stack-data==0.6.2
 tenacity==8.2.3
 terminado==0.18.0
