--- a/.config/environment.yml
+++ b/.config/environment.yml
@@ -32,11 +32,11 @@ dependencies:
   - brotli-python=1.0.9=py310h0f1eb42_8
   - bzip2=1.0.8=h620ffc9_4
   - c-ares=1.21.0=h93a5062_0
-  - ca-certificates=2023.08.22=hca03da5_0
+  - ca-certificates=2023.12.12=hca03da5_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
   - cachetools=5.3.2=pyhd8ed1ab_0
-  - certifi=2023.11.17=py310hca03da5_0
+  - certifi=2024.2.2=py310hca03da5_0
   - cffi=1.16.0=py310hdcd7c05_0
   - charset-normalizer=3.3.2=pyhd8ed1ab_0
   - click=8.1.7=unix_pyh707e725_0
@@ -56,9 +56,11 @@ dependencies:
   - exceptiongroup=1.1.3=pyhd8ed1ab_0
   - executing=2.0.1=pyhd8ed1ab_0
   - expat=2.5.0=hb7217d7_1
+  - faker=23.1.0=pyhd8ed1ab_0
   - ffmpeg=5.1.1=gpl_hfdc7bce_101
   - ffmpeg-python=0.2.0=py_0
   - filelock=3.13.1=pyhd8ed1ab_0
+  - flexpolyline=0.1.0=pyhd8ed1ab_0
   - folium=0.15.0=pyhd8ed1ab_0
   - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
   - font-ttf-inconsolata=3.000=h77eed37_0
@@ -94,6 +96,7 @@ dependencies:
   - greenlet=2.0.1=py310h313beb8_0
   - grpc-cpp=1.46.3=h65cd93d_1
   - grpcio=1.46.3=py310h5c97277_1
+  - h11=0.14.0=py310hca03da5_0
   - httplib2=0.22.0=pyhd8ed1ab_0
   - icu=68.2=hbdafb3b_0
   - idna=3.4=pyhd8ed1ab_0
@@ -111,6 +114,7 @@ dependencies:
   - isoduration=20.11.0=pyhd8ed1ab_0
   - jedi=0.19.1=pyhd8ed1ab_0
   - jinja2=3.1.2=pyhd8ed1ab_1
+  - joblib=1.2.0=py310hca03da5_0
   - jpeg=9e=h80987f9_1
   - json5=0.9.14=pyhd8ed1ab_0
   - jsonpointer=2.4=py310hbe9552e_3
@@ -195,6 +199,7 @@ dependencies:
   - openh264=2.3.0=h9a09cb3_0
   - openjpeg=2.5.0=h5d4e404_1
   - openssl=3.1.4=h0d3ecfb_0
+  - outcome=1.1.0=pyhd3eb1b0_0
   - overrides=7.4.0=pyhd8ed1ab_0
   - p11-kit=0.24.1=h29577a5_0
   - packaging=23.2=pyhd8ed1ab_0
@@ -209,6 +214,7 @@ dependencies:
   - pip=23.3=py310hca03da5_0
   - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_1
   - plotly=5.18.0=pyhd8ed1ab_0
+  - polyline=2.0.1=pyhd8ed1ab_0
   - postgresql=12.15=h2b78512_1
   - prometheus_client=0.18.0=pyhd8ed1ab_1
   - prompt-toolkit=3.0.41=pyha770c72_0
@@ -255,11 +261,16 @@ dependencies:
   - ruamel.yaml=0.18.5=py310hd125d64_0
   - ruamel.yaml.clib=0.2.7=py310h2aa6e3c_2
   - sankee=0.2.4=pyhd8ed1ab_0
+  - scikit-learn=1.3.0=py310h46d7db6_1
+  - scipy=1.11.4=py310h20cbe94_0
   - scooby=0.9.2=pyhd8ed1ab_0
+  - selenium=4.16.0=pyhd8ed1ab_0
+  - selenium-manager=4.16.0=h5ef7bb8_0
   - send2trash=1.8.2=pyhd1c38e8_0
   - setuptools=68.0.0=py310hca03da5_0
   - six=1.16.0=pyhd3eb1b0_1
   - sniffio=1.3.0=pyhd8ed1ab_0
+  - sortedcontainers=2.4.0=pyhd3eb1b0_0
   - soupsieve=2.5=pyhd8ed1ab_1
   - sqlalchemy=2.0.21=py310h80987f9_0
   - sqlite=3.41.2=h80987f9_0
@@ -267,6 +278,7 @@ dependencies:
   - svt-av1=1.2.1=he23bcac_0
   - tenacity=8.2.3=pyhd8ed1ab_0
   - terminado=0.18.0=pyh31c8845_0
+  - threadpoolctl=2.2.0=pyh0d69192_0
   - tinycss2=1.2.1=pyhd8ed1ab_0
   - tk=8.6.13=h5083fa2_1
   - toml=0.10.2=pyhd8ed1ab_0
@@ -275,6 +287,8 @@ dependencies:
   - tqdm=4.66.1=pyhd8ed1ab_0
   - traitlets=5.13.0=pyhd8ed1ab_0
   - traittypes=0.2.1=pyh9f0ad1d_2
+  - trio=0.24.0=py310hca03da5_0
+  - trio-websocket=0.11.1=pyhd8ed1ab_0
   - types-python-dateutil=2.8.19.14=pyhd8ed1ab_0
   - typing-extensions=4.8.0=hd8ed1ab_0
   - typing_extensions=4.8.0=pyha770c72_0
@@ -282,6 +296,7 @@ dependencies:
   - tzcode=2023c=h1a8c8d9_0
   - tzdata=2023c=h04d1e81_0
   - unicodedata2=15.1.0=py310h2aa6e3c_0
+  - unidecode=1.3.8=pyhd8ed1ab_0
   - uri-template=1.3.0=pyhd8ed1ab_0
   - uritemplate=4.1.1=pyhd8ed1ab_0
   - wcwidth=0.2.10=pyhd8ed1ab_0
@@ -292,6 +307,7 @@ dependencies:
   - whitebox=2.3.1=pyhd8ed1ab_0
   - whiteboxgui=2.3.0=pyhd8ed1ab_0
   - widgetsnbextension=4.0.9=pyhd8ed1ab_0
+  - wsproto=1.2.0=pyhd8ed1ab_0
   - x264=1!164.3095=h57fd34a_2
   - x265=3.5=hbc6ce65_3
   - xorg-kbproto=1.0.7=h27ca646_1002
