--- a/.config/requirements.txt
+++ b/.config/requirements.txt
@@ -22,7 +22,7 @@ Brotli==1.0.9
 cached-property==1.5.2
 cachetools==5.3.2
 cattrs==23.1.2
-certifi==2023.11.17
+certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
@@ -44,11 +44,13 @@ eerepr==0.0.4
 entrypoints==0.4
 exceptiongroup==1.1.3
 executing==2.0.1
+Faker==23.1.0
 fastjsonschema==2.18.1
 ffmpeg-python==0.2.0
 filelock==3.13.1
 fiona==1.9.5
 flatbuffers==23.5.26
+flexpolyline==0.1.0
 folium==0.15.0
 fonttools==4.44.0
 fqdn==1.5.1
@@ -73,6 +75,7 @@ google-resumable-media==2.6.0
 googleapis-common-protos==1.61.0
 greenlet==2.0.1
 grpcio==1.46.3
+h11==0.14.0
 httplib2==0.22.0
 idna==3.4
 importlib-metadata==6.8.0
@@ -88,6 +91,7 @@ ipywidgets==8.1.1
 isoduration==20.11.0
 jedi==0.19.1
 Jinja2==3.1.2
+joblib==1.2.0
 json5==0.9.14
 jsonpointer==2.4
 jsonschema==4.19.2
@@ -125,6 +129,7 @@ numexpr==2.8.7
 numpy==1.26.0
 openmeteo_requests==1.1.0
 openmeteo_sdk==1.5.0
+outcome==1.1.0
 overrides==7.4.0
 packaging==23.2
 pandas==2.1.1
@@ -137,6 +142,7 @@ pip==23.3
 pkgutil_resolve_name==1.3.10
 platformdirs==3.11.0
 plotly==5.18.0
+polyline==2.0.1
 prometheus-client==0.18.0
 prompt-toolkit==3.0.41
 protobuf==3.20.3
@@ -176,17 +182,22 @@ rsa==4.9
 ruamel.yaml==0.18.5
 ruamel.yaml.clib==0.2.7
 sankee==0.2.4
+scikit-learn==1.3.0
+scipy==1.11.4
 scooby==0.9.2
+selenium==4.16.0
 Send2Trash==1.8.2
 setuptools==68.0.0
 shapely==2.0.2
 six==1.16.0
 sniffio==1.3.0
+sortedcontainers==2.4.0
 soupsieve==2.5
 SQLAlchemy==2.0.21
 stack-data==0.6.2
 tenacity==8.2.3
 terminado==0.18.0
+threadpoolctl==2.2.0
 tinycss2==1.2.1
 toml==0.10.2
 tomli==2.0.1
@@ -194,11 +205,14 @@ tornado==6.3.3
 tqdm==4.66.1
 traitlets==5.13.0
 traittypes==0.2.1
+trio==0.24.0
+trio-websocket==0.11.1
 types-python-dateutil==2.8.19.14
 typing_extensions==4.8.0
 typing-utils==0.1.0
 tzdata==2023.3
 unicodedata2==15.1.0
+Unidecode==1.3.8
 uri-template==1.3.0
 uritemplate==4.1.1
 url-normalize==1.4.3
@@ -211,6 +225,7 @@ wheel==0.41.2
 whitebox==2.3.1
 whiteboxgui==2.3.0
 widgetsnbextension==4.0.9
+wsproto==1.2.0
 xyzservices==2023.10.1
 y-py==0.5.9
 yarl==1.9.2
